--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+4141# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
-# dependencies
+# depe0ndencies
 node_modules/
 
 # Expo
